# minigraf

./: .codecov.yml  .gitignore  .tarpaulin.toml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PHILOSOPHY.md  POC_SUMMARY.md  Package.swift  README.md  ROADMAP.md  TEST_COVERAGE.md  codecov.yml  demo_bitemporal.txt  demo_commands.txt  demo_negation.txt  demo_recursive.txt  dist-workspace.toml  llms.txt  schema.gql.example
.cargo/: audit.toml
.githooks/: pre-push
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  bench_light.yml  binary-size.yml  c-ci.yml  c-release.yml  cargo-audit.yml  cascade.yml  coverage-gates.yml  coverage.yml  docs-check.yml  fuzz.yml  java-ci.yml  java-release.yml  llvm-cov.yml  mobile.yml  native-release-retroactive.yml  node-ci.yml  node-release.yml  osv-scanner.yml  publish-ffi.yml  python-ci.yml  python-release.yml  release.yml  rust-clippy.yml  rust.yml  rustfmt.yml  smoke.yml  wasm-browser.yml  wasm-release.yml  wasm-wasi.yml
benches/: minigraf_bench.rs  simd_helpers.rs
benches/helpers/: mod.rs
demos/: demo_aggregation.txt  demo_bitemporal.txt  demo_commands.txt  demo_disjunction.txt  demo_expr.txt  demo_negation.txt  demo_recursive.txt
docs/: BENCHMARKS.md  ERROR_REFERENCE.md  TEST_COVERAGE.md  simd-analysis.md
docs/superpowers/plans/: 2026-03-21-phase4-bitemporal.md  2026-03-21-phase5-wal-acid.md  2026-03-21-phase6-1-indexes.md  2026-03-21-phase6-2-packed-pages.md  2026-03-22-phase6-3-benchmarks.md  2026-03-22-phase6-4a-retraction-edge-cases.md  2026-03-22-phase6-4b-benchmarks.md  2026-03-23-nightly-benchmarks.md  2026-03-23-per-page-locking.md  2026-03-23-phase-6.5-on-disk-btree.md  2026-03-23-phase-7-1a-stratified-negation.md  2026-03-24-phase-7-1b-not-join.md  2026-03-24-phase-7-2a-aggregation.md  2026-03-25-phase-7-2b-arithmetic-predicates.md  2026-03-26-phase-7-3-disjunction.md  2026-03-27-phase-7-4-query-optimizer.md  2026-03-31-phase-7-5-tests-error-coverage.md  2026-03-31-phase-7-6-temporal-metadata.md  2026-04-01-phase-7-7a-window-functions.md  2026-04-02-header-checksum-plan.md  2026-04-02-phase-7-7b-udfs.md  2026-04-04-phase-7-8-prepared-statements.md  2026-04-07-phase-7-9-publish-prep.md  2026-04-17-phase-8-1a-browser-wasm.md  2026-04-18-phase-8-1b-wasi-wasm.md  2026-04-19-mobile-bindings.md  2026-04-24-phase-8-3a-python-bindings.md  2026-04-24-phase-8-3b-java-bindings.md  2026-04-24-phase-8-3c-c-bindings.md  2026-04-24-phase-8-3d-nodejs-bindings.md  2026-04-26-extract-release-yml-manual-additions.md  2026-05-01-phase8-completion.md  2026-05-01-wasm-npm-publish.md  2026-05-03-clippy-lint-enforcement.md  2026-05-03-drop-readonly-handle.md  2026-05-13-grammar-conformance-harness.md  2026-05-15-issue-208-selective-lookup.md  2026-05-15-issues-202-203-204-hash-join.md  2026-05-15-predicate-pushdown-mixed-rules.md  2026-05-16-wave3-pr1-foundation.md  (+12 more)
docs/superpowers/specs/: 2026-03-21-phase4-bitemporal-design.md  2026-03-21-phase5-wal-acid-design.md  2026-03-21-phase6-performance-design.md  2026-03-22-phase6-3-benchmarks-design.md  2026-03-22-phase6-4a-retraction-edge-cases-design.md  2026-03-22-phase6-4b-benchmarks-design.md  2026-03-23-nightly-benchmarks-design.md  2026-03-23-per-page-locking-design.md  2026-03-23-phase-6.5-design.md  2026-03-23-phase-7-1-stratified-negation-design.md  (+31 more)
examples/: embedded.rs  file_storage.rs  generate_compat_fixture.rs  memory_profile.rs  tutorial_udfs.rs
examples/browser/: README.md  app.js  index.html
examples/c/: example.c
examples/java/: Example.java
examples/node/: example.js
examples/python/: example.py
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/datalog_eval/: seed_not_join.txt
fuzz/corpus/datalog_parser/: seed_retract.txt  seed_truncated.txt
fuzz/fuzz_targets/: btree_page.rs  datalog_eval.rs  fact_page.rs  file_header.rs  wal_entry.rs
minigraf-c/: Cargo.toml  README.md  cbindgen.toml
minigraf-c/include/: minigraf.h
minigraf-c/src/: lib.rs
minigraf-ffi/: Cargo.toml  README.md
minigraf-ffi/android/: build.gradle.kts  gradlew  settings.gradle.kts
minigraf-ffi/java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
minigraf-ffi/java/src/main/kotlin/io/github/adityamukho/minigraf/: NativeLoader.kt
minigraf-ffi/java/src/main/kotlin/io/github/project_minigraf/minigraf/: NativeLoader.kt
minigraf-ffi/java/src/test/kotlin/io/github/adityamukho/minigraf/: BasicTest.kt
minigraf-ffi/java/src/test/kotlin/io/github/project_minigraf/minigraf/: BasicTest.kt
minigraf-ffi/python/: README.md  build.sh  pyproject.toml
minigraf-ffi/python/tests/: test_basic.py
minigraf-ffi/src/: lib.rs
minigraf-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
minigraf-node/src/: lib.rs
minigraf-wasi/: package.json
minigraf-wasm/: README.md  minigraf.d.ts  minigraf.js  minigraf_bg.wasm  minigraf_bg.wasm.d.ts  package.json
src/: db.rs  lib.rs  main.rs  minigraf.rs  repl.rs  temporal.rs  wal.rs
src/browser/: buffer.rs  indexeddb.rs  mod.rs
src/graph/: mod.rs  storage.rs  types.rs
src/query/: executor.rs  mod.rs  parser.rs
src/storage/: btree.rs  btree_v6.rs  cache.rs  index.rs  mod.rs  packed_pages.rs  persistent.rs  persistent_facts.rs
tests/: aggregation_test.rs  bitemporal_test.rs  btree_v6_test.rs  complex_queries_test.rs  concurrency_test.rs  cross_platform_compat_test.rs  datomic_compat_test.rs  disjunction_test.rs  edge_cases_test.rs  error_handling_test.rs  grammar_conformance.rs  index_corruption_test.rs  index_test.rs  integration_test.rs  magic_sets_test.rs  migration_matrix_test.rs  negation_test.rs  not_join_test.rs  performance_test.rs  predicate_expr_test.rs  prepared_statements_test.rs  production_patterns_test.rs  property_test.rs  recursive_rules_test.rs  retraction_test.rs  smoke_test.rs  temporal_metadata_test.rs  udf_test.rs  wal_test.rs  window_functions_test.rs  xtdb_compat_test.rs
tests/fixtures/: compat.graph
tests/grammar/: grammar.pest
(+71 files in other folders)
