[package]
name = "minigraf-ffi"
version = "0.21.0"
edition = "2024"
description = "UniFFI mobile bindings for Minigraf (Android + iOS)"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
minigraf = { path = ".." }
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1"
