[package]
name = "minigraf-ffi"
version = "1.1.1"
edition = "2024"
description = "UniFFI bridge for Minigraf — bi-temporal graph database"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
minigraf = { path = "..", version = "1.1.1" }
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1"

[lints]
workspace = true
