[package]
name = "minigraf-ffi"
version = "1.1.1"
edition = "2024"
description = "UniFFI bridge for Minigraf — bi-temporal graph database"
license = "MIT OR Apache-2.0"
authors = ["Aditya Mukhopadhyay"]
repository = "https://github.com/project-minigraf/minigraf"
documentation = "https://docs.rs/minigraf-ffi"
readme = "README.md"
keywords = ["graph", "datalog", "bitemporal", "embedded", "database"]
categories = ["database-implementations", "embedded"]

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
minigraf = { path = "..", version = "1.1.1" }
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1"

[lints]
workspace = true
